Add Social Icons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     .box{
       background-color: #fff;
       width: 500px;
-      margin: 50px auto;
+      margin: 25px auto;
     }
     #title {
       font-size: 40px;
@@ -39,9 +39,49 @@
       SITE EM MANUTENÇÃO
     </div>
     <div id="descricao">
-      (43) 99671-0646<br>
-      contato@copoli.com.br
+      (43) 99671-0646 | (43) 3341-1224<br>
+      contato@copoli.com.br<br>
+    </div>
+    <div id="descricao">
+      Siga-nos em nossas redes sociais e solicite seu orçamento:
     </div>
   </div>
+
+  <!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!-- Add font awesome icons -->
+<a href="https://www.facebook.com/coberturadepolicarbonatos/" class="fa fa-facebook" target="_blank"></a>
+<a href="https://www.instagram.com/copolicoberturas/?hl=pt-br" class="fa fa-instagram" target="_blank"></a>
+<a href="https://wa.me/5543996710646?text=Olá,%20gostaria%20de%20solicitar%20um%20orçamento%20sem%20compromisso!" class="fa fa-whatsapp" target="_blank"></a>
+
+<style>
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+}
+  .fa:hover {
+      opacity: 0.7;
+  }
+  
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+
+  .fa-instagram {
+  background: #b31f5c;
+  color: white;
+}
+
+.fa-whatsapp {
+  background: #1fb35d;
+  color: white;
+}
 </body>
 </html>
