--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     }
     #title {
       font-size: 40px;
-      margin-top: 25px;
+      margin-top: 10px;
     }
     #descricao{
       font-size:20px;
       margin: 20px auto;
     }
     #logo {
-      margin-top: 25px;
-      max-width: 300px;
+      margin-top: 15px;
+      max-width: 400px;
       height: auto;
     }
     #logo-task {
@@ -34,7 +34,7 @@
 </head>
 <body>
   <div class="box">
-    <img src="icon.jpg" id="logo">
+    <img src="icon.png" id="logo">
     <div id="title">
       SITE EM MANUTENÇÃO
     </div>
